# otter

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  code_of_conduct.md  contributing.md  otter-engine  security.md  select_feature.md  setup.iss
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
api/: endpoints.md  logic.py  server.go
arena/: arena.go  arena.py
cuda/: kernels.cu  otter_cuda.h
docs/: api.md  architecture.md  features.md  index.md  installation.md  multi_model.md  plugins.md  system.md
engine/: attention.c  attention.h  inference.c  inference.h  main.c  otter_bridge.c  otter_bridge.h  quant.c  quant.h  quant_stream.c  stream.c  stream.h  tensor.c  tensor.h  tokenizer.c  tokenizer.h
mesh/: mesh  mesh.c  network_config.json
models/: logic.go  logic.py  registry.json
packaging/linux/: otter.desktop  otter.xml
packaging/mac/: Info.plist
plugins/: example_plugin.py
scripts/: benchmark.ps1  benchmark.sh  build_api.ps1  build_api.sh  fetch.ps1  fetch.sh  install.sh  install_mac.sh  install_windows.ps1
src/: app.rs  config.rs  engine_bindings.rs  export.rs  main.rs  per_model_config.rs  update.rs
