[package]
name = "otter"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", features = ["default", "glow", "persistence"] }
egui = { version = "0.28", features = ["default"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
